[gd_scene load_steps=7 format=2]

[ext_resource path="res://art/checkbox_example.png" type="Texture" id=1]
[ext_resource path="res://fonts/TitanOne-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://code/MainScreen.gd" type="Script" id=3]
[ext_resource path="res://fonts/new_dynamicfont.tres" type="DynamicFont" id=4]
[ext_resource path="res://fonts/MainScreen.tres" type="DynamicFont" id=5]

[sub_resource type="DynamicFont" id=1]
size = 94
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="MainScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.0
margin_top = -22.0
margin_right = 66.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 5 )
text = "PLAY"
icon = ExtResource( 1 )

[node name="Credit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.5
margin_top = 72.0
margin_right = 65.5
margin_bottom = 116.0
custom_fonts/font = ExtResource( 5 )
text = "CREDIT"

[node name="Label" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
text = "Programing :- Mohd Huzaifa

Audio                 :- Kenney.nl
"
align = 1
valign = 1

[node name="Back" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.5
margin_top = 172.0
margin_right = 65.5
margin_bottom = 216.0
custom_fonts/font = ExtResource( 5 )
text = "BACK"

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
margin_bottom = 176.0
color = Color( 0.807843, 0.560784, 0.560784, 1 )

[node name="Label" type="Label" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.901961, 0.780392, 0.113725, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "No Name Game"
align = 1
valign = 1

[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
[connection signal="pressed" from="Credit" to="." method="_on_Credit_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
